make header sit correct on mobile

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -19,11 +19,20 @@ header.app-header {
 
   > div {
     @extend .container;
+
+    @include media($max-width: ($desktop_bp - 1)) {
+      padding-left: 5px;
+      padding-right: 5px;
+    }
   }
 
   > div .app-title {
     @extend .navbar-header;
     margin-right: 25px;
+
+    @include media($max-width: ($desktop_bp - 1)) {
+      margin-left: 0;
+    }
 
     h1 {
       margin: 0;
@@ -52,9 +61,13 @@ header.app-header {
 
         width: 30px;
         height: 30px;
-        margin: 0 10px 0 0;
+        margin: 0 5px 0 0;
         padding: 3px;
         background: #fff;
+
+        @include media(desktop) {
+          margin-right: 10px;
+        }
       }
 
       .instance-name {
